# something

./: .gitignore  .hlint.yaml  README.md  default.nix  hie.yaml  parser.hs  release.nix  test.txt
.github/workflows/: test.yml
.obelisk/impl/: github.json
backend/: backend.cabal
backend/src/: Backend.hs
backend/src/Backend/: NotifyHandler.hs  RequestHandler.hs  Schema.hs  Transaction.hs  ViewSelectorHandler.hs
common/: common.cabal
common/src/Common/: App.hs  Prelude.hs  Route.hs  Schema.hs
common/src/Data/: Bible.hs
common/src/Data/Attoparsec/Text/: BibleReference.hs
dep/beam/: github.json
dep/gargoyle/: github.json
frontend/: frontend.cabal
frontend/src/: Frontend.hs
frontend/src-bin/: main.hs
frontend/src/Frontend/: Selection.hs
static/css/: style.css
