name: backend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  if impl(ghcjs)
    buildable: False
  build-depends:
      base
    , beam-core
    , beam-migrate
    , beam-postgres
    , common
    , constraints-extras
    , exceptions
    , gargoyle-postgresql-connect
    , frontend
    , obelisk-backend
    , obelisk-route
    , postgresql-simple
    , resource-pool
    , rhyolite-backend
    , safe-exceptions
  exposed-modules:
    Backend
  other-modules:
    Backend.NotifyHandler
    Backend.RequestHandler
    Backend.Schema
    Backend.Transaction
    Backend.ViewSelectorHandler
  default-extensions:
    ConstraintKinds
    DataKinds
    DeriveFoldable
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    EmptyCase
    GADTs
    GeneralizedNewtypeDeriving
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
  ghc-options: -Wall

executable backend
  main-is: main.hs
  hs-source-dirs: src-bin
  if impl(ghcjs)
    buildable: False
  build-depends:
      base
    , backend
    , common
    , frontend
    , obelisk-backend
