name: common
version: 0.1
cabal-version: >= 1.2
build-type: Simple

library
  hs-source-dirs: src
  build-depends:
      aeson
    , aeson-gadt-th
    , base
    , lens
    , mtl
    , obelisk-route
    , rhyolite-common
    , semialign
    , text
    , witherable
  default-extensions:
    DataKinds
    DeriveFoldable
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    EmptyCase
    GADTs
    GeneralizedNewtypeDeriving
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
  exposed-modules:
    Common.App
    Common.Prelude
    Common.Route
    Common.Schema
